kube/app/ticketer-test-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketer-test-postgres
spec:
  selector:
    app: ticketer-test-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketer-test-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketer-test-postgres
  template:
    metadata:
      labels:
        app: ticketer-test-postgres
    spec:
      containers:
        - name: ticketer-test-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: ticketer-test-postgres-pvc
      restartPolicy: Always
