kube/app/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: http://user-service.default.svc.cluster.local/user/v1/validate
    nginx.ingress.kubernetes.io/auth-method: 'POST'
    nginx.ingress.kubernetes.io/auth-response-headers: userId
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    
spec:
#  tls:
#  - hosts:
#    - localhost
#    secretName: hmac-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /user/v1/*
        backend:
          serviceName: user-service
          servicePort: 80
      - path: /user/v1/ticket/*
        backend:
          serviceName: ticketer-service
          servicePort: 80
      - path: /public/v1/*
        backend:
          serviceName: ticketer-service
          servicePort: 80
      - path: /admin/v1/*
        backend:
          serviceName: ticketer-service
          servicePort: 80
      - path: /worker/v1/*
        backend:
          serviceName: ticketer-service
          servicePort: 80
